Version 2.02.100 -
================================
  Fix segfault if devices/global_filter is not specified correctly.

Version 2.02.99 - 24th July 2013
================================
  Do not zero init 4KB of thin snapshot for non-zeroing thin pool (2.02.94).
  Issue an error msg if lvconvert --type used incorrectly with other options.
  Use LOG_DEBUG/ERR msg severity instead default for lvm2-activation-generator.
  Support ARG_GROUPABLE with merge_synonym (for --raidwritemostly).
  Fix segfault when reporting raid_syncaction for older kernels.
  Add LV report fields: raid_mismatch_count/raid_sync_action/raid_write_behind.
  Add LV reporting fields raid_min_recovery_rate, raid_max_recovery_rate.
  Add sync_percent as alias for copy_percent LV reporting field.
  Add lv_ prefix to modules reporting field.
  Use units B or b (never E) with no decimal places when displaying sizes < 1k.
  Add support for poolmetadataspare LV, that will be used for pool recovery.
  Improve activation order when creating thin pools in non-clustered VG.
  List thin-pool and thin modules for thin volumes.
  Correct thin creation error paths.
  Use local activation for clearing snapshot COW device.
  Add lvm2-activation-net systemd unit to activate LVs on net-attached storage.
  Release memory allocated with _cached_info().
  Add whole log_lv and metadata_lv sub volumes when creating partial tree.
  Properly use snapshot layer for origin which is also thin volume.
  Avoid generating metadata backup when calling update_pool_lv().
  Send thin messages also for active thin pool and inactive thin volume.
  Add activation/auto_set_activation_skip to control activation skip flagging.
  Add 's(k)ip activation' bit to lvs -o lv_attr to indicate skip flag attached.
  Add --ignoreactivationskip to lvcreate/vgchange/lvchange to ignore skip flag.
  Add --setactivationskip to lvcreate/lvchange to set activation skip flag.
  Automatically flag thin snapshots to be skipped during activation.